Fantasy Football Capstone Project Update

--- a/Fantasy_Football_R_Markdown.html
+++ b/Fantasy_Football_R_Markdown.html
@@ -246,11 +246,11 @@ $(document).ready(function () {
 </div>
 <div id="ideas-for-further-research" class="section level2">
 <h2>Ideas for Further Research</h2>
-<p>There is a lot of room to expand the scope of this project in further research. This project only analyzed one of the many positions in football. I think it would be a great idea to provide the same type of analysis for each position and then tie it all together to get the full picture of a complete fantasy team. It would also be cool to compare each position to see which one is the most valuable and which positions to prioritze when drafting. With these analytics, you could help prove the common idea that drafting a kicker in the third round is a terrible decision.</p>
+<p>There is a lot of room to expand the scope of this project in further research. This project only analyzed one of the many positions in football. I think it would be a great idea to provide the same type of analysis for each position and then tie it all together to get the full picture of a complete fantasy team. Each position could be compared to each other to see which one is the most valuable and which positions to prioritze when drafting. With these analytics, you could help prove the common idea that drafting a kicker in the third round is a terrible decision.</p>
 </div>
 <div id="conclusion" class="section level2">
 <h2>Conclusion</h2>
-<p>While there will always be several factors to decide on in real time during the fantasy draft, it would be a good idea to develop a game plan of the top running backs you believe have the best chance to succeed. While making this list of running backs, there should be a strong focus on his rushing and receiving yards from the previous season. These categories from the previous year could be a strong indictor of future success and should be factored into your ranking. The model with rushing and receiving yards could also be applied on future seasons. Hopefully with the knowledge, fantsy football league memebers will be better prepared for their future drafts.</p>
+<p>While there will always be several factors to decide on in real time during the fantasy draft, it would be a good idea to develop a solid game plan of the top running backs you believe have the best chance to succeed before the acual draft. While making this list of running backs, there should be a strong focus on his rushing and receiving yards from the previous season. These categories from the previous year could be a strong indictor of future success and should be factored into your ranking. The model with rushing and receiving yards could also be applied on future seasons. Hopefully with this knowledge, fantsy football league memebers will be better prepared for their future drafts.</p>
 </div>
 
 
